--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - /app/node_modules
     depends_on:
       - ollama
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     command: [ "npm", "run", "dev" ]
 
   ollama:
